--- a/template.ejs
+++ b/template.ejs
@@ -6,13 +6,6 @@
 
 <img src="./images/gongzhonghao.gif" width="50%" alt="公众号">
 
-<h2>总览</h2>
-
-<img alt="Github 数据总览" src="https://denvercoder1-github-readme-stats.vercel.app/api/?username=haixiangyan&show_icons=true&count_private=true&theme=react&hide_border=true&bg_color=1F222E&title_color=F85D7F&icon_color=F8D866" height="192px"/>
-<img alt="常用开发语言" src="https://github-readme-stats.vercel.app/api/top-langs/?username=haixiangyan&langs_count=8&layout=compact&theme=react&hide_border=true&bg_color=1F222E&title_color=F85D7F&icon_color=F8D866&" height="192px" />
-
-<img alt="Github 日常" src="https://denvercoder1-activity-graph.herokuapp.com/graph/?username=haixiangyan&bg_color=1F222E&color=F8D866&line=F85D7F&point=FFFFFF&hide_border=true" />
-
 <h2>📖 文章</h2>
 <ul>
     <% socials.forEach(function(social){ %>
@@ -82,3 +75,18 @@
     <% }); %>
     </tbody>
 </table>
+
+<h2>总览</h2>
+
+<h3>数据统计</h3>
+<a href="https://github.com/haixiangyan">
+    <img alt="数据总览" src="https://denvercoder1-github-readme-stats.vercel.app/api/?username=haixiangyan&show_icons=true&count_private=true&theme=react&hide_border=true&bg_color=1F222E&title_color=F85D7F&icon_color=F8D866" height="192px"/>
+</a>
+<a href="https://github.com/haixiangyan">
+    <img alt="常用开发语言" src="https://github-readme-stats.vercel.app/api/top-langs/?username=haixiangyan&langs_count=8&layout=compact&theme=react&hide_border=true&bg_color=1F222E&title_color=F85D7F&icon_color=F8D866&hide=Jupyter%20Notebook" height="192px"/>
+</a>
+
+<br>
+
+<h3>活跃度</h3>
+<img alt="Github 日常" src="https://denvercoder1-activity-graph.herokuapp.com/graph/?username=haixiangyan&bg_color=1F222E&color=F8D866&line=F85D7F&point=FFFFFF&hide_border=true" />
