fix: 修复 medium 的图标

--- a/template.ejs
+++ b/template.ejs
@@ -32,7 +32,7 @@
         </td>
         <td>
             <a href="https://medium.com/@haixiang6123">
-                <img src="./images/medium.png.png" alt="Medium">
+                <img src="./images/medium.png" alt="Medium">
             </a>
         </td>
     </tr>
