--- a/template.ejs
+++ b/template.ejs
@@ -8,30 +8,30 @@
 <table>
     <tr>
         <th>公众号</th>
-        <th>知乎</th>
-        <th>掘金</th>
-        <th>简书</th>
-        <th>Medium</th>
+        <th><a href="https://www.zhihu.com/people/haixiangyan" target="_blank">知乎</a></th>
+        <th><a href="https://juejin.cn/user/272334614432887" target="_blank">掘金</a></th>
+        <th><a href="https://www.jianshu.com/u/0340be4082b5" target="_blank">简书</a></th>
+        <th><a href="https://medium.com/@haixiang6123" target="_blank">Medium</a></th>
     </tr>
     <tr>
         <td><img src="images/gongzhonghao.gif" alt="公众号"></td>
         <td>
-            <a href="https://www.zhihu.com/people/haixiangyan">
+            <a href="https://www.zhihu.com/people/haixiangyan" target="_blank">
                 <img src="./images/zhihu.png" alt="知乎">
             </a>
         </td>
         <td>
-            <a href="https://juejin.cn/user/272334614432887">
+            <a href="https://juejin.cn/user/272334614432887" target="_blank">
                 <img src="./images/juejin.png" alt="掘金">
             </a>
         </td>
         <td>
-            <a href="https://www.jianshu.com/u/0340be4082b5">
+            <a href="https://www.jianshu.com/u/0340be4082b5" target="_blank">
                 <img src="./images/jianshu.png" alt="简书">
             </a>
         </td>
         <td>
-            <a href="https://medium.com/@haixiang6123">
+            <a href="https://medium.com/@haixiang6123" target="_blank">
                 <img src="./images/medium.png" alt="Medium">
             </a>
         </td>
@@ -83,7 +83,7 @@
         <tr>
             <th align="center"><%= project.logo %></th>
             <th>
-                <a href="<%= project.preview || project.github %>">
+                <a href="<%= project.preview || project.github %>" target="_blank">
                     <%= project.repo %>
                 </a>
             </th>
@@ -101,10 +101,10 @@
 <h2>总览</h2>
 
 <h3>数据统计</h3>
-<a href="https://github.com/haixiangyan">
+<a href="https://github.com/haixiangyan" target="_blank">
     <img alt="数据总览" src="https://denvercoder1-github-readme-stats.vercel.app/api/?username=haixiangyan&show_icons=true&count_private=true&theme=react&hide_border=true&bg_color=1F222E&title_color=F85D7F&icon_color=F8D866" height="192px"/>
 </a>
-<a href="https://github.com/haixiangyan">
+<a href="https://github.com/haixiangyan" target="_blank">
     <img alt="常用开发语言" src="https://github-readme-stats.vercel.app/api/top-langs/?username=haixiangyan&langs_count=8&layout=compact&theme=react&hide_border=true&bg_color=1F222E&title_color=F85D7F&icon_color=F8D866&hide=Jupyter%20Notebook" height="192px"/>
 </a>
 
