feat: 更新封面宽度

--- a/template.ejs
+++ b/template.ejs
@@ -53,7 +53,7 @@
     <% books.forEach(function(book){ %>
         <tr>
             <th align="center">
-                <img src="<%= book.cover %>" alt="<%= book.name %>">
+                <img width="80" src="<%= book.cover %>" alt="<%= book.name %>">
             </th>
             <th>
                 <a href="<%= book.url %>" target="_blank"><%= book.name %></a>
