feat: 添加文字说明

--- a/src/template.ejs
+++ b/src/template.ejs
@@ -1,10 +1,13 @@
 <h2>🤩 我</h2>
 
-<img src="https://visitor-badge.glitch.me/badge?page_id=page.id" alt="visitor badge"/>
+<img src="https://visitor-badge.glitch.me/badge?page_id=haixiangyan" alt="visitor badge"/>
 
 <p>哈喽，<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" alt="手势"> 我是海怪.</p>
 
 <h2>🙌 社交</h2>
+
+<p>经常在各大平台出没 👻，可以搜索我的全网账号<b>【写代码的海怪】</b>找到我。每周定期更新一篇博文，关注我，一起开心写代码，快乐学编程 💪！</p>
+
 <table>
     <tr>
         <% socials.forEach(function(social){ %>
@@ -23,6 +26,9 @@
 </table>
 
 <h2>📚 小书</h2>
+
+<p>当一篇博文讲得东西非常多，或者内容非常长的时候，我就变会把它写成一本在线小书。所在小书皆可免费食用 🍝、无限转载 📣，唯一要求是转载时加上【写代码的海怪】作者出处即可。</p>
+
 <table>
     <thead align="center">
     <tr>
@@ -54,6 +60,9 @@
 </table>
 
 <h2>💼 项目</h2>
+
+<p>在学前端的路上，也写不少项目，有的比较认真 🧐，有的只是为了好玩 🎮，有的比较沙雕 🤪。</p>
+
 <table>
     <thead align="center">
     <tr>
@@ -89,6 +98,8 @@
 </table>
 
 <h2>总览</h2>
+
+<p>Github 时常会更新不少新东西和好玩的项目哦~</p>
 
 <h3>数据统计</h3>
 <a href="https://github.com/haixiangyan" target="_blank">
