--- a/src/template.ejs
+++ b/src/template.ejs
@@ -2,9 +2,11 @@
 
 <img src="https://visitor-badge.glitch.me/badge?page_id=haixiangyan" alt="visitor badge"/>
 
-<blockquote><%= weatherStr %></blockquote>
-
 <p>哈喽，<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" alt="手势"> 我是海怪.</p>
+
+<p><%= weatherStr %></p>
+
+<img width="100%" align="center" src="<%= background %>" alt="background">
 
 <h2>🙌 社交</h2>
 
