--- a/src/template.ejs
+++ b/src/template.ejs
@@ -5,12 +5,14 @@
 <p>哈喽，<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" alt="手势"> 我是海怪.</p>
 
 <p>
-    目前我在深圳 (<%= weather.latitude %>, <%= weather.longitude %>)。
-    今天深圳体感温度 <%= weather.feels_like_c %> 摄氏度，湿度 <%= weather.humidity %>。
-    <img src="https:<%= weather.icon_url %>" alt="天气">
+    目前我在深圳 (<%= weather.latt_long %>)。
+    今天深圳温度最高 <%= weather.consolidated_weather[0].min_temp %> 度，
+    最低 <%= weather.consolidated_weather[0].max_temp %> 度，
+    <%= getStateCNName(weather.consolidated_weather[0].weather_state_abbr) %>
+    <img width="32" src="<%= getIconUrl(weather.consolidated_weather[0].weather_state_abbr) %>" alt="天气">。
 </p>
 
-<blockquote>更新时间：<%= weather.local_time %></blockquote>
+<small><i>更新时间：<%= weather.consolidated_weather[0].applicable_date %></i></small>
 
 <img width="100%" align="center" src="<%= background %>" alt="background">
 
