--- a/src/template.ejs
+++ b/src/template.ejs
@@ -4,16 +4,7 @@
 
 <img src="https://visitor-badge.glitch.me/badge?page_id=haixiangyan" alt="visitor badge"/><img src="https://github.com/haixiangyan/haixiangyan/actions/workflows/node.js.yml/badge.svg" alt="build badge"/>
 
-<p>哈喽，<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" alt="手势"> 我是海怪.</p>
-
-<p>
-    坐标深圳，今天最低温度 <%= (weather.consolidated_weather[0].min_temp).toFixed(2) %> 度，
-    最高 <%= (weather.consolidated_weather[0].max_temp).toFixed(2) %> 度，
-    <%= getStateCNName(weather.consolidated_weather[0].weather_state_abbr) %>
-    <img width="32" src="<%= getIconUrl(weather.consolidated_weather[0].weather_state_abbr) %>" alt="天气">。
-</p>
-
-<p>每日一图：</p>
+<p>哈喽，<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25px" alt="手势"> 我是海怪，坐标深圳。每天分享一图：</p>
 
 <img width="100%" align="center" src="<%= background %>" alt="background">
 
