--- a/src/template.ejs
+++ b/src/template.ejs
@@ -2,7 +2,7 @@
 
 <blockquote>最后更新于 <%= updatedAt %>（每天早上 6:30 自动更新）</blockquote>
 
-<img src="https://visitor-badge.glitch.me/badge?page_id=haixiangyan" alt="visitor badge"/><img src="https://github.com/haixiangyan/haixiangyan/actions/workflows/node.js.yml/badge.svg" alt="build badge"/>
+<img src="https://github.com/haixiangyan/haixiangyan/actions/workflows/node.js.yml/badge.svg" alt="build badge"/>
 
 <p>哈喽，<img src="https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" width="25" alt="手势"> 我是海怪，坐标深圳。每天分享一图：</p>
 
